[gd_scene load_steps=51 format=2]

[ext_resource path="res://GameContent/Main.gd" type="Script" id=1]
[ext_resource path="res://GameContent/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameContent/NetworkController.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameContent/UI_Layer.gd" type="Script" id=4]
[ext_resource path="res://fonts/Pixel_Game_UI.tres" type="DynamicFont" id=5]
[ext_resource path="res://GameContent/LineEdit.gd" type="Script" id=6]
[ext_resource path="res://fonts/Pixel_SubTitle.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/Pixel_Title.tres" type="DynamicFont" id=8]
[ext_resource path="res://Hover_Button_Style.tres" type="StyleBox" id=9]
[ext_resource path="res://Pressed_Button_Style.tres" type="StyleBox" id=10]
[ext_resource path="res://Normal_Button_Style.tres" type="StyleBox" id=11]
[ext_resource path="res://fonts/Pixel_Chat.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/GUI/W-Key-GUI.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/A-Key-GUI.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI/S-Key-GUI.png" type="Texture" id=15]
[ext_resource path="res://Assets/GUI/D-Key-GUI.png" type="Texture" id=16]
[ext_resource path="res://Assets/GUI/HUD/grenade_HUD_B.png" type="Texture" id=17]
[ext_resource path="res://Assets/GUI/HUD/dash_HUD.png" type="Texture" id=18]
[ext_resource path="res://Chat_Text.tres" type="RichTextEffect" id=19]
[ext_resource path="res://Assets/GUI/HUD/camera_HUD_OFF.png" type="Texture" id=20]
[ext_resource path="res://Assets/GUI/HUD/forcefield_HUD_B.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sound/score.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/Sound/Countdown.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/GUI/Cog Hovered.png" type="Texture" id=24]
[ext_resource path="res://fonts/pixel.TTF" type="DynamicFontData" id=25]
[ext_resource path="res://GameContent/Loadout_Menu.tscn" type="PackedScene" id=26]
[ext_resource path="res://GameContent/PowerupGUIParticles.tscn" type="PackedScene" id=27]
[ext_resource path="res://Assets/GUI/HUD/ultimate_HUD_gunner_B.png" type="Texture" id=28]
[ext_resource path="res://Assets/GUI/Cog Pressed.png" type="Texture" id=29]
[ext_resource path="res://GameContent/Move_Stick.gd" type="Script" id=30]
[ext_resource path="res://Assets/GUI/Cog.png" type="Texture" id=31]
[ext_resource path="res://GameContent/Chat_Box.gd" type="Script" id=32]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.145098 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_top = 8.0
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 2
extra_spacing_top = 4
extra_spacing_bottom = 4
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=10]
size = 8
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=16]
size = 12
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=17]
size = 12
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=18]
size = 18
outline_color = Color( 0.988235, 0.0784314, 0.0313726, 1 )
font_data = ExtResource( 25 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 544.046, 959.644 ]
}

[node name="Test_Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 15.6066, 14.9669 )

[node name="Players" type="Node" parent="."]

[node name="Loadout_Menu" parent="." instance=ExtResource( 26 )]

[node name="NetworkController" parent="." instance=ExtResource( 3 )]

[node name="HTTPRequest_GameServerCheckUser" type="HTTPRequest" parent="NetworkController"]

[node name="HTTPRequest_GameServerConfirmConnection" type="HTTPRequest" parent="NetworkController"]

[node name="HTTPRequest_GameServerEndMatch" type="HTTPRequest" parent="NetworkController"]

[node name="Chat_Layer" type="CanvasLayer" parent="."]
layer = 5

[node name="Line_Edit" type="LineEdit" parent="Chat_Layer"]
margin_top = 347.562
margin_right = 238.0
margin_bottom = 379.562
mouse_filter = 2
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 250
placeholder_text = "Press ENTER to chat"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat_Box" type="RichTextLabel" parent="Chat_Layer"]
margin_top = 73.0
margin_right = 292.0
margin_bottom = 334.0
rect_clip_content = false
mouse_filter = 2
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
scroll_active = false
scroll_following = true
custom_effects = [ ExtResource( 19 ) ]
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat_Fade_Timer" type="Timer" parent="Chat_Layer/Chat_Box"]
wait_time = 6.0
one_shot = true

[node name="Kill_Feed" type="RichTextLabel" parent="Chat_Layer"]
modulate = Color( 1, 1, 1, 0.815686 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1000.0
margin_right = -20.0
margin_bottom = 261.0
rect_clip_content = false
mouse_filter = 2
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
scroll_following = true
custom_effects = [ ExtResource( 19 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Button" type="TextureButton" parent="Chat_Layer"]
margin_left = 22.0
margin_top = 11.0
margin_right = 115.0
margin_bottom = 104.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 5.308, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Layer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Score_Label" type="RichTextLabel" parent="UI_Layer"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 120.0
rect_clip_content = false
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_Label" type="RichTextLabel" parent="UI_Layer"]
anchor_right = 1.0
margin_top = 99.8129
margin_bottom = 189.813
rect_clip_content = false
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown_Label" type="Label" parent="UI_Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Big_Label_Blue" type="Label" parent="UI_Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.6702
margin_right = 29.3298
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.180392, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Big_Label_Red" type="Label" parent="UI_Layer"]
anchor_top = 0.000501296
anchor_right = 0.999198
anchor_bottom = 1.0
margin_left = -33.055
margin_right = 28.9451
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Leave_Match_Button" type="Button" parent="UI_Layer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.724
margin_top = 154.465
margin_right = 161.276
margin_bottom = 221.465
focus_mode = 0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
enabled_focus_mode = 0
text = "Leave Match"

[node name="Input_GUIs" type="Control" parent="UI_Layer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -81.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerupParticles" parent="UI_Layer/Input_GUIs" instance=ExtResource( 27 )]
modulate = Color( 1, 1, 1, 0.278431 )
position = Vector2( 0, 100 )
scale = Vector2( 3, 3 )
emitting = false
lifetime = 0.5

[node name="Move_GUIs" type="Node2D" parent="UI_Layer/Input_GUIs"]
scale = Vector2( 0.8, 0.8 )

[node name="Move_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Move_GUIs"]
anchor_top = 0.00432434
anchor_bottom = 0.00432434
margin_left = -66.8367
margin_top = -78.1522
margin_right = 67.1633
margin_bottom = -56.1522
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MOVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Move_GUIs"]
position = Vector2( -30.9009, -236.068 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
centered = false
hframes = 2

[node name="A_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Move_GUIs"]
position = Vector2( -107.911, -158.522 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )
centered = false
hframes = 2

[node name="S_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Move_GUIs"]
position = Vector2( -30.9879, -158.522 )
scale = Vector2( 4, 4 )
texture = ExtResource( 15 )
centered = false
hframes = 2

[node name="D_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Move_GUIs"]
position = Vector2( 46.2469, -158.522 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )
centered = false
hframes = 2

[node name="Ability_GUIs" type="Node2D" parent="UI_Layer/Input_GUIs"]

[node name="E_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
position = Vector2( -20.6783, -25.8934 )
scale = Vector2( 2, 2 )
texture = ExtResource( 21 )
centered = false

[node name="UTILITY_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
position = Vector2( 54.2329, -26.4901 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
centered = false

[node name="ULT_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
position = Vector2( -263.526, -26.4901 )
scale = Vector2( 2, 2 )
texture = ExtResource( 28 )
centered = false

[node name="SHIFT_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
position = Vector2( 122.314, -28.7334 )
scale = Vector2( 2, 2 )
texture = ExtResource( 20 )
centered = false

[node name="SPACE_GUI" type="Sprite" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
position = Vector2( -94.5113, -26 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
centered = false

[node name="Teleport_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = -140.476
margin_top = 20.0
margin_right = -6.47693
margin_bottom = 35.0
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPACE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = -65.7316
margin_top = 20.0
margin_right = 68.2682
margin_bottom = 35.0
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability_Sub_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = -67.2231
margin_top = -44.3823
margin_right = 66.7766
margin_bottom = -29.3823
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ULT_Sub_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = -310.26
margin_top = -44.3823
margin_right = -176.26
margin_bottom = -29.3823
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Utility_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = 8.26819
margin_top = 20.0
margin_right = 142.268
margin_bottom = 35.0
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RCLICK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ULT_GUI_Text" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = -309.642
margin_top = 20.0
margin_right = -175.642
margin_bottom = 35.0
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Q"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleWeapon_GUI_Text2" type="Label" parent="UI_Layer/Input_GUIs/Ability_GUIs"]
margin_left = 75.8908
margin_top = 11.1989
margin_right = 209.891
margin_bottom = 44.1989
rect_pivot_offset = Vector2( -533.113, 40.108 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHIFT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert_Text" type="RichTextLabel" parent="UI_Layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -960.0
margin_top = 180.0
margin_right = 960.0
margin_bottom = 358.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center][color=black] KILLED"
text = " KILLED"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skirmish_Subtext" type="RichTextLabel" parent="UI_Layer"]
anchor_right = 1.0
margin_top = 115.462
margin_bottom = 215.462
rect_clip_content = false
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center][color=black] This is a skirmish lobby for waiting in matchmaking queue."
text = " This is a skirmish lobby for waiting in matchmaking queue."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert_Fade_Timer" type="Timer" parent="UI_Layer"]
wait_time = 3.0
one_shot = true

[node name="Move_GUI_Fade_Timer" type="Timer" parent="UI_Layer"]
wait_time = 0.5
one_shot = true

[node name="Move_Stick" type="Button" parent="UI_Layer"]
anchor_right = 0.5
anchor_bottom = 1.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
action_mode = 0
keep_pressed_outside = true
script = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Shoot_Stick" type="Button" parent="UI_Layer"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
action_mode = 0
keep_pressed_outside = true
script = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
is_move = false

[node name="Dash" type="Label" parent="UI_Layer/Shoot_Stick"]
margin_left = 231.36
margin_top = 859.44
margin_right = 287.36
margin_bottom = 881.44
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DASH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ult" type="Label" parent="UI_Layer/Shoot_Stick"]
margin_left = 289.672
margin_top = 792.08
margin_right = 345.672
margin_bottom = 814.08
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ULT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Utility" type="Label" parent="UI_Layer/Shoot_Stick"]
margin_left = 363.629
margin_top = 737.36
margin_right = 419.629
margin_bottom = 759.36
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GRENADE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="Label" parent="UI_Layer/Shoot_Stick"]
margin_left = 454.258
margin_top = 705.298
margin_right = 510.258
margin_bottom = 727.298
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FORCEFIELD"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel_Button" type="Button" parent="UI_Layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 34.2733
margin_top = -93.9291
margin_right = 160.273
margin_bottom = -26.9291
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
enabled_focus_mode = 0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = 2.0

[node name="Countdown_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 4, 4 )
